feat : added my list

--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
         <p>I love flowers</p>
         <img src="c:\Users\jeeva\Downloads\pexels-pixabay-56866.jpg" alt="flower image" width="300" height="200"><br><br>
         <a href="https://www.pexels.com/search/flowers/">pexels</a>
+        <h2>My most favourite flower</h2>
+        <ul>
+            <li>Rose</li>
+            <li>Jasmine</li>
+           <li>Lotus</li> 
+        </ul>
+        <h2>My least favourite flowers</h2>
+        <ol>
+            <li>Marygold</li>
+            <li>Hibiscus</li>
+            <li>Daisy</li>
+        </ol>
     </body>
 </html>
