--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
         </title>
     </head>
     <body>
+         <form>
+            <label for="search"></label>
+            <input type="text" placeholder="search"> <button style="background-color: green">Search</button>
+        </form>
         <h1>hello!</h1>
         <p>Im jeevarekha</p>
         <p>I love flowers</p>
-        <img src="c:\Users\jeeva\Downloads\pexels-pixabay-56866.jpg" alt="flower image" width="300" height="200"><br><br>
+        <img src="c:\Users\jeeva\Downloads \pexels-pixabay-56866.jpg" alt="flower image" width="300" height="200"><br><br>
         <a href="https://www.pexels.com/search/flowers/">pexels</a>
         <h2>My most favourite flower</h2>
         <ul>
@@ -21,7 +25,11 @@
         <ol>
             <li>Marygold</li>
             <li>Hibiscus</li>
-            <li>Daisy</li>
+            <li>Daisy</li> 
         </ol>
+        <form>
+            <label for="email">Email Address</label>
+            <input type="text" value="email"  >
+        </form>
     </body>
 </html>
