feat : added a table

--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
         <title>
             html practice
         </title>
+        <style>
+            table,th,tr,td{
+                width:50%;
+                height:50px;
+                border:2px solid black;
+                border-collapse:collapse;
+            
+            }
+            th{
+                background-color: aquamarine;
+            }
+            
+        </style>
     </head>
     <body>
          <form>
@@ -27,9 +40,32 @@
             <li>Hibiscus</li>
             <li>Daisy</li> 
         </ol>
-        <form>
-            <label for="email">Email Address</label>
-            <input type="text" value="email"  >
-        </form>
+       <table>
+        <tr>
+             <th>s.no</th>
+             <th>Available Flowers</th>
+             <th>Price</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>rose</td>
+            <td>30</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>jasmine</td>
+            <td>50</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>daisy</td>
+            <td>50</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>hybiscus</td>
+            <td>20</td>
+        </tr>
+       </table>
     </body>
 </html>
