feat : added a tag

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <input type="text" placeholder="search"> <button style="background-color: green">Search</button>
         </form>
         <h1>hello!</h1>
-        <p>Im jeevarekha</p>
-        <p>I love flowers</p>
+        <p><div style="background-color:skyblue;">Im jeevarekha</div></p>
+        <p>I <span style="background-color:pink;">love</span> flowers</p>
         <img src="c:\Users\jeeva\Downloads \pexels-pixabay-56866.jpg" alt="flower image" width="300" height="200"><br><br>
         <a href="https://www.pexels.com/search/flowers/">pexels</a>
         <h2>My most favourite flower</h2>
@@ -67,5 +67,6 @@
             <td>20</td>
         </tr>
        </table>
+
     </body>
 </html>
